--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prisma/client": "^5.19.0",
     "clsx": "^2.1.1",
     "next": "14.2.6",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.11",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
